--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,6 @@ web_app/data/
 # Keep the static folder but do not with the children
 web_app/static/*
 !web_app/static
+
+# Ignore all logs
+*/logs
